2018-02-18 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Fixed accessing files within lockRootPath, resolves #10
	* Released version 3.2.4

2018-02-17 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 3.2.3

2018-02-06 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Removed PHP 7.1 constructs, resolves #6
	* Fixed accessing files with path relative to web root, resolves #7
	* Released version 3.2.1 and 3.2.2 (mixup during release)

2018-01-23 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 3.2.0

2018-01-14 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added centralised file fetching method, resolves #5
	* Adapted CharsetConverter utility to TYPO3 CMS 8

2017-04-05 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 3.1.0

2017-04-01 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Verified compatibility with TYPO3 CMS 8, resolves #1

2016-05-02 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Updated documentation, resolves #76001
	* Released version 3.0.0, resolves #76002

2016-04-26 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added specific exceptions for Connector services, resolves #75923
	* Changed BE module JavaScript to RequireJS, resolves #75930

2016-04-25 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Refactored for TYPO3 CMS 7, resolves #75913

2014-06-05 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 2.4.0, resolves #57622

2014-04-05 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Migrated documentation to reST, resolves #57621

2014-04-02 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Verified compatibility with TYPO3 CMS 6.2, resolves #57536
	* Fixed broken debug output in TYPO3 CMS 6.2, resolves #57534
	* Add API to access language and character set converter instances, resolves #55361
	* Removed useless code example in query() method of base connector class, resolves #52100

2013-07-21 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Verified compatibility with TYPO3 CMS 6.1, resolves #50256