@@ -1,3 +1,7 @@
+2018-10-05 Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
+	* Added unit tests for ConnectorUtility
+
 2018-02-18 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Fixed accessing files within lockRootPath, resolves #10
